herosection.css.css
* {
  margin: 0;
  padding: 0;
}

.nav-links {
  padding: 30px;
  list-style: none;
  display: flex;
  gap: 1.25vw;
}
.user-menu span{
  font-size: 8vh;
  cursor: pointer;
  display: none;
}
.user {
  display: inline-block;
  font-family: Arial, Helvetica, sans-serif;
  font-size: large;
  color: rgb(58, 78, 87);
  padding-left: 300px;
  text-align: center;
}
.logo {
  color: rgb(10, 84, 59);
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: 4vh;
  font-weight: 600;
}
.nav-links li a:hover {
  color: rgb(71, 194, 153);
  cursor: pointer;
  border-bottom: 2px solid rgb(71, 194, 153);
}
.nav-links li a{
  text-decoration: none;
  color: black;
}
.left {
  flex-basis: 40%;
}
.btn:hover {
  transform: scale(1.3);
}
.btn {
  border-radius: 5px;
  background-color: rgb(28, 90, 69);
  padding: 8px 5px;
  color: white;
}
.container {
  width: 80%;
  margin: 3vh auto;
}
nav {
  height: 8vh;
  width: 80%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: relative;
  margin: 0 auto;
  border-bottom: 1px solid gray;
}

.user {
  background-color: rgb(161, 244, 216);
  padding: 8px 5px;
  color: white;
  border-radius: 12px;
  font-size: 0.85rem;
}
.main {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.right {
  flex-basis: 40%;
  height: 65vh;
}
.right img {
  height: 99%;
  width: 100%;;
}
.achievement {
  width: 80%;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  background-color: rgb(71, 194, 153);
  margin: 2vh auto;
  flex-wrap: wrap;
}
.achievement h1 {
  flex-basis: 30%;
  font-weight: 900;
}
.achievement div {
  width: 20%;
}
.big-text {
  font-size: 4vh;
}
@media screen and (max-width: 680px) {
  .nav-links{
    /* display: none; */
    color: black;
    font-size: 5vh;
    height: 100vh;
    width: 97vw;
    position: absolute;
    top: -55vh;
    background: rgba(255, 255, 255, 0.808);
    display: block;
    height: 45vh;
    text-align: center;
    transition: .4s ease-in-out;
  }
  .show{
    top: 5vh;
  }
  .user-menu{
    /* width: 33vw; */
    display: flex;
    align-items: center;
    justify-content: space-between;
  }
  .user-menu span{
    font-size: 8vh;
    cursor: pointer;
    display: block;
  }
  
  .container {
    width: 100%;
    margin: 1vh auto;
  }
  .left, .right{
    flex-basis: 80%;
  }
  .achievement {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    background-color: rgb(71, 194, 153);
    flex-wrap: wrap;
  }
  .achievement h1 {
    flex-basis: 100%;
    text-align: center;
    font-size: 5vh;
    font-weight: 900;
  }
  .achievement div {
    width: 33%;
    align-items: center;
    
    text-align: center;

  }
  
}

